# JniDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/baidu/yuepingxu/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/baidu/yuepingxu/jnidemo/: JniUtil.java  MainActivity.java  Test.java
app/src/main/jni/: jniutil.c
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/baidu/yuepingxu/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
